--- a/HISTORY
+++ b/HISTORY
@@ -24,8 +24,6 @@
 	    Reached the doubtful milestone of having a source file (regexp.c)
 	       which provokes a compiler error on an old compiler
 	       (if using the optimiser)
-	    Ignoring leading spaces on condition lines now (means that
-	       everything can be indented in the rcfile)
 1991/10/22: v2.31
 1991/12/05: v2.40
 	    Made procmail capable of healing the recipient's mail spool file
@@ -37,56 +35,18 @@
 1992/04/30: v2.70
 	    Made procmail & lockfile clock skew independent (important during
 	       LOCKTIMEOUT)
-	    Made procmail accept multiple recipients (this was not as trivial
-	       as it sounds!), in order for complete compatibility with mailers
-	       like smail 2.x
-	    Expanded the mail-delivery-agent instructions in examples/advanced,
-	       this includes specific intstructions for smail 2.x
 	    Made special entries in config.h for semi-permanent environment-
 	       variable overrides
-	    A complete rewrite of formail, the code got bigger, the runtime
-	       requirement got bigger, it got slower, but, it's more structured
-	       (so much for structured programming :-)
-	    Made procmail check the permissions of its invoker, generate
-	       an overriding From_ line if necessary, and consequently made it
-	       accept the -f option (fromwhom), and also the alternate obsolete
-	       -r option of course
-	    Wiped out the ./include tree, made autoconf check it instead (the
-	       compile line looks so terribly clean now :-)
-	    Procmail makes an additional security check on the rcfiles before
-	       accepting them (owner and permissions, see man page)
 1992/07/01: v2.71
-	    Sharpened the autoconf "const" check, to catch buggy AIX compilers
-	    Made the MAILBOX_SEPARATORS more orthogonal (i.e. you can define
-	       one or both now)
-	    Added the -A option to formail, the only option that was missing
-	       (to be able to boldly add header fields)
-	    Fixed some typos and extended the procmailex man page by a popular
-	       example
-	    Enhanced the MH directory delivery mode, procmail uses the MH
-	       method of finding the next number now (this requires procmail
-	       to read the directory)
-	    Fixed a typo in the WIFEXITED substitute macro (for non-POSIX
-	       systems), should fix all erroneous "program failed" messages
-	    Fixed a problem on byte-aligned machines with the 'i' flag
 	    Now throwing away all environment variables starting with LD_
 	       (not just LD_LIBRARY_PATH), but only on those machines that
 	       have the security hole (i.e. SunOS)
-	    Created logfile summariser (in shell-script form), by popular
-	       demand (examples/mailstat)
 	    Gave procmail, formail, lockfile and mailstat a more verbose
 	       command line help (called up by -h or -?)
 1993/02/04: v2.80
 	    Started using CVS to manage the source (god's gift to programmers)
-	    In procmail, lockfile and formail I built in a sanity check now,
-	       in case they would be called with argc==0
-	    Provided an *extensive* generic mailinglist example (well, it's
-	       more than an example really :-)
-	    Created the mailinglist swiss-army-knife utility "multigram"
-	    Extended the man pages (including more examples)
 	    Substantially changed the examples/advanced mailer integration
 	       instructions (especially for smail)
-	    Provided for brain damaged compilers that misparse #include lines
 	    Enhanced lockfile a lot:
 	       - the -r option really specifies *re*tries now
 	       - concatenated and/or seperate options are allowed now
@@ -199,3 +159,59 @@
 	       turns out to be /dev/null
 	    Added a paragraph to the mailinglist/Manual (explaining multigram
 	       and threshold values)
+1993/06/02: v2.82 (never really released, was only available as prerelease 4)
+	    Fixed sleeptime argument to lockfile
+	    Refined the ^FROM_DAEMON macro again
+	    Added a ^FROM_MAILER macro
+	    Fixed the library conflict with openlog
+	    Removed the dependencies on the structure of /usr/include
+	    Removed the dependencies on the structure of /lib, /usr/lib etc.
+	    Enhanced autoconf to ask for LOCKINGTEST directories
+	    Added an extra paragraph to INSTALL explaining the necessity of
+	       the LOCKINGTESTs
+	    Made the internal egrep in procmail warn about mismatching parens
+	       in a regexp
+	    Made the regexp lib faster again (worst case performance improved)
+	    Split up the manpage auto-generated sed scripts, some seds cannot
+	       process scripts with more than 100 commands
+	    Changed manpage substitions tokens to use @*@ instead of +*+
+	    Added example recipe for emacs users in the procmailex man page
+	    Extended recommend.c, it advises changing the permissions on
+	       the system mail spool directory as well now (if needed)
+	    Procmail can now deliver to multiple directories (using hardlinks)
+	    If the umask permits o+x, this bit will be set on any mailbox
+	       procmail delivers to directly
+	    Added the LASTFOLDER & LOGABSTRACT variables to procmail in order
+	       to ease the generation of custom logfile abstracts/summaries
+	    Programs started from within TRAP can read the mail from stdin
+	    Worked my way around the !@#$%^&*() POSIX setgid() semantics (if
+	       your OS supports setrgid() or setregid())
+	    Using off_t now (I seem to have overlooked it in my POSIX docs)
+	    Eliminated all uses of "expr match"
+	    Altered mailstat to work on really broken shells
+	    Extended the FAQ
+	    Changes to the mailinglist scripts:
+	       - Finetuned some scripts
+	       - Added digested lists
+	       - Added standalone archive servers
+	       - Extended logging for administrivia requests
+	       - Flist can and should be setuid root now, POSIX setuid
+		 semantics require it <sigh>
+	       - Added support for multiple architectures
+	       - Updated and extended the Manual file (reading recommended)
+	       - Added the showlink convenience utility
+	       - Added support for non-sendmail compatible mailers
+1993/07/01: v2.90
+	    Condition lines in recipes can now be started with a leading `*',
+	       there is no longer a need to count condition lines, simply
+	       set the number to zero, and let procmail find out by itself
+	    Added the -a and -m options to procmail, for enhanced interfacing
+	       to sendmail
+	    Updated the recommended sendmail.cf mailer entry docs in
+	       examples/advanced
+	    Fixed a race condition when the recipient mailbox did not exist
+	       and two procmails simultaneously tried to create it
+	    Cleaned up main() in procmail.c (localised variables)
+	    Made sure the logfile was flushed before procmail exits
+	    When procmail gobbles up the leading From_ line, it reads in 2KB
+	       blocks now (instead of character wise; saves a few system calls)
