--- a/README
+++ b/README
@@ -35,7 +35,7 @@ For a more complete list of all library references see "src/includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.81 1993/02/19)
+The procmail mail processing program. (v2.90 1993/07/01)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
@@ -48,6 +48,8 @@ The accompanying formail program enables you to generate autoreplies, split up
 digests/mailboxes into the original messages, do some very simple
 header-munging/extraction, or force mail into mail-format (with leading From
 line).
+
+Also included is a comprehensive mailinglist/archive management system.
 
 ----------------------
 
@@ -78,8 +80,8 @@ as you do).
 ----------------------
 
 I would like to take the opportunity to express my gratitude in particular
-to three powerusers of the procmail-package.  Without their constant feedback
-v2.80 would not have looked the same:
+to these devoted users of the procmail-package.	 Without their constant
+feedback procmail would not have looked the same:
 
 	David W. Tamkin		An excellent proofreader and betatester
 	 <dattier@gagme.chi.il.us>
@@ -87,6 +89,8 @@ v2.80 would not have looked the same:
 	 <jal@uiuc.edu>
 	Dan Jacobson		For his many useful suggestions
 	 <Dan_Jacobson@ATT.COM>
+	Rick Troxel		Because I crashed his Convex way too often :-)
+	 <rick@helix.nih.gov>
 
 ----------------------
 
@@ -105,13 +109,15 @@ Snail-Mail:	P.O.Box 21074
 		6369 ZG Simpelveld
 		The Netherlands
 
+Procmail mailinglist:		procmail-request@informatik.rwth-aachen.de
+
 ----------------------
 A recent version can be picked up at various comp.sources.misc archives.
 The latest version can be obtained directly from the ftp-archive at:
 
 	ftp.informatik.rwth-aachen.de (137.226.112.172)
 
-	as zipped tar file:		pub/unix/procmail.tar.zip	~128KB
-	as compressed tar file:		pub/unix/procmail.tar.Z		~192KB
+	as zipped tar file:		pub/unix/procmail.tar.zip	<152KB
+	as compressed tar file:		pub/unix/procmail.tar.Z		<216KB
 	in compressed shar format:	pub/unix/procmail.??.Z	      11 parts
 ----------------------
